# AQI_prediction

./: .cache.sqlite  .env  pyproject.toml
.dvc/: config
.github/workflows/: data_pipeline.yml
data/processed/: dataset.csv
data/processed/test/: test_data.csv
data/processed/train/: train_data.csv
data/raw/: merged_data_raw.csv
data/raw/aqi/: aqi_data.csv
data/raw/weather/: weather_data.csv
gx/expectations/: .ge_store_backend_id
src/data/: fetch_data.py  fetch_historic_data.py  merge_data.py  process_data.py  split_data.py  validate_and_test_data.py
src/models/: evaluate_and_register_model.py  predict_model.py  train_model.py
