[project]
name = "aqi_prediction_be"
version = "0.1.0"
description = ""
authors = [
    {name = "Nadica", email = "nadica.uzunova@student.um.si"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.12"

dependencies = [
    "requests>=2.32.3,<3.0.0",
    "pandas==1.5.3",
    "scikit-learn>=1.6.1,<2.0.0",
    "streamlit>=1.41.1,<2.0.0",
    "openmeteo-requests>=1.3.0,<2.0.0",
    "requests-cache>=1.2.1,<2.0.0",
    "retry-requests>=2.0.0,<3.0.0",
    "dvc>=3.58.0",
    "dvc-s3>=3.2.0",  # DVC S3 podpora
    "numpy>=1.26.0,<2.0.0",
    "tensorflow==2.16.2; sys_platform != 'darwin'",
    "tensorflow-macos==2.16.2; sys_platform == 'darwin'",
    "tensorflow-metal==1.2.0; sys_platform == 'darwin'",
    "scipy (>=1.15.1,<2.0.0)",
    "pymongo (>=4.11,<5.0)",
    "great-expectations>=0.16.8,<1.0.0",
    "mlflow (>=2.20.1,<3.0.0)",
    "evidently (>=0.6.1,<0.7.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]  # ✅ Popravljeno